# reddit-credibility-checker

./: .env.example  .gitignore  CHECKPOINTS.md  PROJECT_PLAN.md  README.md  WORKLOG.md  pyproject.toml
prompts/: claim_extraction.md
src/reddit_credibility/: __init__.py  claim_candidate_filter.py  claim_extractor.py  cli.py  config.py  database.py  json_store.py  market_data.py  normalizer.py  pullpush_client.py  reddit_client.py  report_generator.py  review_export.py  schemas.py  scoring.py
templates/: credibility_report.md.j2
tests/: push_pull_pilot.py  test_database.py  test_export_claim_candidates_csv.py  test_market_data.py  test_pullpush_pipeline.py  test_schemas.py  test_scoring.py
